Made alot of progress

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <version>${kotlin.version}</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>7.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -48,8 +53,29 @@
           </execution>
         </executions>
       </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <version>3.2.1</version>
+      <executions>
+        <execution>
+          <phase>package</phase>
+          <goals>
+            <goal>shade</goal>
+          </goals>
+          <configuration>
+            <relocations>
+              <relocation>
+                <pattern>org.objectweb.asm</pattern>
+                <shadedPattern>dev.steyn.kotlinloader.asm</shadedPattern>
+              </relocation>
+            </relocations>
+            <createDependencyReducedPom>false</createDependencyReducedPom>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
     </plugins>
-
     <resources>
       <resource>
         <directory>${project.basedir}/src/main/resource</directory>
