--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,8 @@
   <packaging>pom</packaging>
   <version>0.0.1</version>
   <modules>
-    <module>loader-spigot</module>
+    <module>spigot-loader</module>
   </modules>
-
-
   <properties>
     <kotlin.version>1.3.61</kotlin.version>
   </properties>
@@ -22,17 +20,13 @@
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>${kotlin.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-reflect</artifactId>
-      <version>${kotlin.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
       <version>7.1</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -78,7 +72,7 @@
     </plugins>
     <resources>
       <resource>
-        <directory>${project.basedir}/src/main/resource</directory>
+        <directory>${project.basedir}/src/main/resources</directory>
         <filtering>true</filtering>
       </resource>
     </resources>
