--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,14 @@
   <groupId>dev.steyn</groupId>
   <artifactId>kotlin-loader</artifactId>
   <packaging>pom</packaging>
-  <version>0.0.1</version>
+  <version>1.0.0</version>
   <modules>
     <module>spigot-loader</module>
+    <module>bungee-loader</module>
+    <module>loader-common</module>
   </modules>
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <kotlin.version>1.3.61</kotlin.version>
   </properties>
 
@@ -20,7 +23,12 @@
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>${kotlin.version}</version>
-      <scope>compile</scope>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-reflect</artifactId>
+      <version>1.3.61</version>
     </dependency>
     <dependency>
       <groupId>org.ow2.asm</groupId>
@@ -46,6 +54,11 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <module>
+
+          </module>
+        </configuration>
       </plugin>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
@@ -77,6 +90,4 @@
       </resource>
     </resources>
   </build>
-
-
 </project>
