--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <kotlin.version>1.3.61</kotlin.version>
+    <java.version>1.8</java.version>
   </properties>
 
   <dependencies>
