--- a/pom.xml
+++ b/pom.xml
@@ -18,30 +18,14 @@
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>${kotlin.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-reflect</artifactId>
       <version>${kotlin.version}</version>
+      <scope>provided</scope>
     </dependency>
-    <!--    <dependency>-->
-    <!--      <artifactId>kotlin-script-runtime</artifactId>-->
-    <!--      <groupId>org.jetbrains.kotlin</groupId>-->
-    <!--      <version>${kotlin.version}</version>-->
-    <!--    </dependency>-->
-    <!--    <dependency>-->
-    <!--      <artifactId>kotlin-script-util</artifactId>-->
-    <!--      <groupId>org.jetbrains.kotlin</groupId>-->
-    <!--      <version>${kotlin.version}</version>-->
-    <!--    </dependency>-->
-
-    <!--    <dependency>-->
-    <!--      <artifactId>kotlin-compiler-embeddable</artifactId>-->
-    <!--      <groupId>org.jetbrains.kotlin</groupId>-->
-    <!--      <scope>runtime</scope>-->
-    <!--      <version>${kotlin.version}</version>-->
-    <!--    </dependency>-->
-
     <dependency>
       <artifactId>spigot</artifactId>
       <groupId>org.spigotmc</groupId>
