--- a/pom.xml
+++ b/pom.xml
@@ -7,25 +7,34 @@
   <groupId>dev.steyn</groupId>
   <artifactId>kotlin-loader</artifactId>
   <version>1.0.0</version>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <kotlin.version>1.3.61</kotlin.version>
-    <java.version>1.8</java.version>
-  </properties>
-
   <dependencies>
+
+    <!-- We compile the Kotlin stdlib to provide it on runtime for the plugins to prevent jar bloating -->
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>${kotlin.version}</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-reflect</artifactId>
       <version>${kotlin.version}</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
+    <dependency>
+      <artifactId>kotlinx-coroutines-core</artifactId>
+      <groupId>org.jetbrains.kotlinx</groupId>
+      <scope>compile</scope>
+      <version>${kotlinx.coroutines.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>kotlinx-coroutines-jdk8</artifactId>
+      <groupId>org.jetbrains.kotlinx</groupId>
+      <scope>compile</scope>
+      <version>${kotlinx.coroutines.version}</version>
+    </dependency>
+
     <dependency>
       <artifactId>spigot-api</artifactId>
       <groupId>org.spigotmc</groupId>
@@ -39,6 +48,13 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <kotlin.version>1.3.61</kotlin.version>
+    <kotlinx.coroutines.version>1.3.2</kotlinx.coroutines.version>
+    <java.version>1.8</java.version>
+  </properties>
 
   <build>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
@@ -56,11 +72,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <module>
-
-          </module>
-        </configuration>
       </plugin>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
