--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,16 @@
   <groupId>dev.steyn</groupId>
   <artifactId>kotlin-loader</artifactId>
   <version>1.0.0</version>
-  <dependencies>
+  <description>Spigot Kotlin PluginLoader</description>
 
+  <properties>
+    <java.version>1.8</java.version>
+    <kotlin.version>1.3.61</kotlin.version>
+    <kotlinx.coroutines.version>1.3.2</kotlinx.coroutines.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
+  <dependencies>
     <!-- We compile the Kotlin stdlib to provide it on runtime for the plugins to prevent jar bloating -->
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -48,13 +56,6 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <kotlin.version>1.3.61</kotlin.version>
-    <kotlinx.coroutines.version>1.3.2</kotlinx.coroutines.version>
-    <java.version>1.8</java.version>
-  </properties>
 
   <build>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
