--- a/pom.xml
+++ b/pom.xml
@@ -16,54 +16,16 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-    <!-- We compile the Kotlin stdlib to provide it on runtime for the plugins to prevent jar bloating -->
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jdk8</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-reflect</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <artifactId>kotlinx-coroutines-core</artifactId>
-      <groupId>org.jetbrains.kotlinx</groupId>
-      <scope>compile</scope>
-      <version>${kotlinx.coroutines.version}</version>
-    </dependency>
-    <dependency>
-      <artifactId>kotlinx-coroutines-jdk8</artifactId>
-      <groupId>org.jetbrains.kotlinx</groupId>
-      <scope>compile</scope>
-      <version>${kotlinx.coroutines.version}</version>
-    </dependency>
-
-    <dependency>
-      <artifactId>spigot-api</artifactId>
-      <groupId>org.spigotmc</groupId>
-      <scope>provided</scope>
-      <version>1.14.4-R0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm</artifactId>
-      <version>7.1</version>
-      <scope>compile</scope>
-    </dependency>
-  </dependencies>
-
   <build>
-    <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-maven-plugin</artifactId>
         <version>${kotlin.version}</version>
+        <configuration>
+          <jvmTarget>1.8</jvmTarget>
+          <languageVersion>1.3</languageVersion>
+        </configuration>
         <executions>
           <execution>
             <id>compile</id>
@@ -71,6 +33,12 @@
             <goals>
               <goal>compile</goal>
             </goals>
+            <configuration>
+              <sourceDirs>
+                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                <sourceDir>${project.basedir}/src/main/java</sourceDir>
+              </sourceDirs>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -96,6 +64,39 @@
         </execution>
       </executions>
     </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+        <executions>
+          <execution>
+            <id>default-compile</id>
+            <phase>none</phase>
+          </execution>
+          <execution>
+            <id>default-testCompile</id>
+            <phase>none</phase>
+          </execution>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+            <id>java-compile</id>
+            <phase>compile</phase>
+          </execution>
+          <execution>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+            <id>java-test-compile</id>
+            <phase>test-compile</phase>
+          </execution>
+        </executions>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>3.8.1</version>
+      </plugin>
     </plugins>
     <resources>
       <resource>
@@ -104,4 +105,44 @@
       </resource>
     </resources>
   </build>
+
+  <dependencies>
+    <!-- We compile the Kotlin stdlib to provide it on runtime for the plugins to prevent jar bloating -->
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib-jdk8</artifactId>
+      <version>${kotlin.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-reflect</artifactId>
+      <version>${kotlin.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>kotlinx-coroutines-jdk8</artifactId>
+      <groupId>org.jetbrains.kotlinx</groupId>
+      <scope>provided</scope>
+      <version>${kotlinx.coroutines.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>spigot-api</artifactId>
+      <groupId>org.spigotmc</groupId>
+      <scope>provided</scope>
+      <version>1.14.4-R0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>7.1</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <artifactId>lombok</artifactId>
+      <groupId>org.projectlombok</groupId>
+      <scope>provided</scope>
+      <version>1.18.10</version>
+    </dependency>
+  </dependencies>
 </project>
