Added getPlugin Method

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: dev.steyn.kotlinloader.bootstrap.KotlinLoaderPlugin
 version: ${project.version}
 api-version: 1.13
 load: STARTUP
+author: steenooo
 
 commands:
   kotlinloader:
