--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>dev.steyn</groupId>
   <artifactId>kotlin-loader</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <description>Spigot Kotlin PluginLoader</description>
 
   <properties>
