Add spigot repository. oops

--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,12 @@
       </resource>
     </resources>
   </build>
-
+  <repositories>
+    <repository>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
