--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <artifactId>kotlin-maven-plugin</artifactId>
         <version>${kotlin.version}</version>
         <configuration>
-          <jvmTarget>1.8</jvmTarget>
+          <jvmTarget>${java.version}</jvmTarget>
           <languageVersion>1.3</languageVersion>
         </configuration>
         <executions>
@@ -67,8 +67,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>8</source>
-          <target>8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
         <executions>
           <execution>
