--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,45 @@
 
   <groupId>dev.steyn</groupId>
   <artifactId>kotlin-loader</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <dependencies>
+    <dependency>
+      <artifactId>lombok</artifactId>
+      <groupId>org.projectlombok</groupId>
+      <scope>provided</scope>
+      <version>1.18.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib-jdk8</artifactId>
+      <version>${kotlin.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-reflect</artifactId>
+      <version>${kotlin.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>kotlinx-coroutines-jdk8</artifactId>
+      <groupId>org.jetbrains.kotlinx</groupId>
+      <scope>provided</scope>
+      <version>${kotlinx.coroutines.version}</version>
+    </dependency>
+
+    <dependency>
+      <artifactId>spigot-api</artifactId>
+      <groupId>org.spigotmc</groupId>
+      <scope>provided</scope>
+      <version>1.14.4-R0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>7.1</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
   <description>Spigot Kotlin PluginLoader</description>
 
   <properties>
@@ -111,37 +149,5 @@
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
     </repository>
   </repositories>
-  <dependencies>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jdk8</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-reflect</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>kotlinx-coroutines-jdk8</artifactId>
-      <groupId>org.jetbrains.kotlinx</groupId>
-      <scope>provided</scope>
-      <version>${kotlinx.coroutines.version}</version>
-    </dependency>
-
-    <dependency>
-      <artifactId>spigot-api</artifactId>
-      <groupId>org.spigotmc</groupId>
-      <scope>provided</scope>
-      <version>1.14.4-R0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm</artifactId>
-      <version>7.1</version>
-      <scope>compile</scope>
-    </dependency>
-  </dependencies>
+  <version>1.0.1-SNAPSHOT</version>
 </project>
