--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,15 @@
 kotlin:
   repository: https://repo1.maven.org/maven2/
-  dependencies:
-    - maven:org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin.version}:kotlin-stdlib-jdk8.jar
-    - maven:org.jetbrains.kotlin:kotlin-stdlib:${kotlin.version}:kotlin-stdlib.jar
-    - maven:org.jetbrains.kotlin:kotlin-reflect:${kotlin.version}:kotlin-reflect.jar
-    - maven:org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${kotlinx.coroutines.version}:kotlinx-coroutines-jdk.jar
-    - maven:org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinx.coroutines.version}:kotlinx-coroutines-core.jar
+  base:
+    dependencies:
+      - maven:org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin.version}:kotlin-stdlib-jdk8.jar
+      - maven:org.jetbrains.kotlin:kotlin-stdlib:${kotlin.version}:kotlin-stdlib.jar
+      - maven:org.jetbrains.kotlin:kotlin-reflect:${kotlin.version}:kotlin-reflect.jar
+      - maven:org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${kotlinx.coroutines.version}:kotlinx-coroutines-jdk.jar
+      - maven:org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinx.coroutines.version}:kotlinx-coroutines-core.jar
+  scripting:
+    enabled: true
+    dependencies:
     - maven:org.jetbrains.kotlin:kotlin-script-runtime:${kotlin.version}:script-runtime.jar
     - maven:org.jetbrains.kotlin:kotlin-script-util:${kotlin.version}:script-util.jar
     - maven:org.jetbrains.kotlin:kotlin-scripting-jsr223-embeddable:${kotlin.version}:scripting-embeddable.jar
