--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <artifactId>spigot-api</artifactId>
+      <artifactId>spigot</artifactId>
       <groupId>org.spigotmc</groupId>
       <scope>provided</scope>
       <version>1.14.4-R0.1-SNAPSHOT</version>
