--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <kotlin.version>1.3.70</kotlin.version>
     <kotlinx.coroutines.version>1.3.2</kotlinx.coroutines.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <asm.version>7.1</asm.version>
   </properties>
 
   <dependencies>
@@ -38,9 +39,16 @@
     <dependency>
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
-      <version>7.1</version>
+      <version>${asm.version}</version>
       <scope>compile</scope>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.ow2.asm</groupId>-->
+<!--      <artifactId>asm-util</artifactId>-->
+<!--      <version>${asm.version}</version>-->
+<!--    </dependency>-->
+
+
   </dependencies>
 
   <build>
@@ -133,6 +141,10 @@
     </resources>
   </build>
   <repositories>
+    <repository>
+      <id>boundless</id>
+      <url>https://repo.boundlessgeo.com/main/</url>
+    </repository>
     <repository>
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
