--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@ kotlin:
   repository: https://repo1.maven.org/maven2/
   dependencies:
     - maven:org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin.version}:kotlin-stdlib-jdk8.jar
+    - maven:org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin.version}:kotlin-stdlib-jdk7.jar
     - maven:org.jetbrains.kotlin:kotlin-stdlib:${kotlin.version}:kotlin-stdlib.jar
     - maven:org.jetbrains.kotlin:kotlin-reflect:${kotlin.version}:kotlin-reflect.jar
     - maven:org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${kotlinx.coroutines.version}:kotlinx-coroutines-jdk.jar
